# codefee-works-api

./: .dockerignore  .env  .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  notes.md
migrations/2022-10-28-164525_create_todos/: down.sql  up.sql
src/: main.rs
src/app/: db.rs  error.rs  http.rs  mod.rs  routes.rs  schema.rs
src/app/todo/: models.rs
src/app/todo/commands/: create_todo.rs  delete_todo.rs  get_todo.rs  update_todo.rs
src/configs/: cors.rs  logger.rs  mod.rs  open_api.rs
src/middlewares/: cors.rs
src/modules/todo/: mod.rs  models.rs  routes.rs
src/modules/todo/commands/: create_todo.rs  delete_todo.rs  get_todo.rs  get_todos.rs  link_todos.rs  mod.rs  update_todo.rs
src/utils/: db.rs  env.rs  http.rs  mod.rs
