[package]
name = "codefee-works-api"
description = "Experimental APIs for Codefee Works"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
postgres = "0.19.4"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
derive_more = { version = "0.99.0", features = ["display", "error"] }
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
